# clevis

./: .gitignore  Makefile.am  clevis.in  configure.ac  meson.build
cmd/: decrypt.c  luks-list
cmd/pins/: Makefile.am  http.c  libtang.c  pwd.c  sss.c  tang.c
dracut/: Makefile.am  clevis-hook.sh  module-setup.sh
luks/: Makefile.am  clevis-luks-bind.c  clevis-luks-udisks2.c  luks.c  luks.h  pcmd.c  pcmd.h
luks/askp/: Makefile.am
pins/: clevis-pin-sss.c  clevis-pin-test.c  tang.c
src/: Makefile.am  clevis  clevis-decrypt  clevis-decrypt.c  clevis-encrypt  clevis-encrypt.c  clevis-fuse.c  clevis-luks-bind  clevis-luks-udisks2.c  clevis-luksbind  clevis-pin-http.c  clevis-pin-tang.c  clevis-pin-test.c  clevis.c  clevis.in  http.c  http.h  sss.c  sss_alg.c  sss_alg.h  tang.h  tests
src/clevis/: Makefile.am
src/clevis/pins/: libtang.c  libtang.h
src/kms/: Makefile.am  clevis-kms-add.in  clevis-kms@.service.in  clevis-kms@.socket.in
src/pins/: Makefile.am  clevis-pin-http.c  clevis-pin-sss.c  clevis-pin-tang.c  libhttp.c  libsss.c  libtang.c  sss.c  tang.c
src/pins/tang/: clevis-decrypt-tang  clevis-encrypt-tang
src/systemd/: clevis-luks-askpass.path  clevis-luks-askpass.service.in
src/udisks2/: clevis-luks-udisks2.c
tests/: clevis-pin-http  clevis-pin-sss  clevis-pin-test  pin-http  pin-sss  pin-tang  pin-test
udisks2/: clevis-luks-udisks2.c
